Prevent default styling of select on safari mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,9 @@ form .input {
 form input.error {
   border-color: red !important;
 }
+select {
+  -webkit-appearance: none;
+}
 
 #repos-list {
   padding-top: 28px;
